# RAY-AI-application

./: .gitignore  ARCHITECTURE.md  DOCUMENTATION.md  INSTALLATION.md  LICENSE  README.md  UI_IMPROVEMENTS_SUMMARY.md  USER_GUIDE.md  apk_list.txt
.orchids/: orchids.json
android/: BUILD_INSTRUCTIONS.md  build_log_final.txt  build_log_v2.txt  build_log_v3.txt  build_log_v4.txt  build_log_v5.txt  build_log_v6.txt  gradle.properties  gradlew  gradlew.bat
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  native-lib-v2.cpp  native-lib.cpp
android/app/src/main/res/anim/: scale_in.xml  scale_out.xml  slide_in_bottom.xml  slide_out_bottom.xml  typing_animation.xml
android/app/src/main/res/color/: nav_item_color.xml
android/app/src/main/res/drawable/: archived_badge.xml  bg_action_chip.xml  bg_app_gradient.xml  bg_drawer_header.xml  bg_input_glass.xml  bg_nav_bar.xml  bg_search_input.xml  bg_status_chip.xml  bg_toolbar_glass.xml  bg_toolbar_icon.xml  bottom_sheet_bg.xml  btn_primary_gradient.xml  bubble_ai.xml  bubble_user.xml  circle_bg_orange.xml  circle_button.xml  dynamic_island_bg.xml  edit_text_bg.xml  gradient_bg.xml  ic_action_copy.xml  ic_action_edit.xml  ic_action_longer.xml  ic_action_retry.xml  ic_action_shorter.xml  ic_action_think.xml  ic_add_chat.xml  ic_bottom_home.xml  ic_bottom_models.xml  ic_copy.xml  ic_info_button.xml  ic_menu_archive.xml  ic_menu_hamburger.xml  ic_menu_quick.xml  ic_menu_zoom_in.xml  ic_menu_zoom_out.xml  ic_ray_logo.xml  ic_refresh.xml  ic_stop.xml  ic_zoom_in.xml  ic_zoom_out.xml  (+4 more)
android/app/src/main/res/layout/: activity_chat.xml  activity_chat_history.xml  activity_main.xml  activity_main_new.xml  activity_model.xml  activity_settings.xml  bottom_sheet_quick_actions.xml  dialog_about.xml  dialog_hf_file_picker.xml  dialog_slider.xml  fragment_history.xml  fragment_home.xml  fragment_models.xml  item_chat.xml  item_chat_history.xml  item_drawer_history.xml  item_hf_file.xml  item_model.xml  item_setting_action.xml  item_setting_header.xml  item_setting_info.xml  item_setting_selection.xml  item_setting_slider.xml  item_setting_switch.xml  layout_code_block.xml  sheet_models.xml
android/app/src/main/res/menu/: bottom_nav_menu.xml  chat_history_menu.xml  main_menu.xml
android/app/src/main/res/values/: colors.xml  (+4 more)
docs/: ARCHITECTURE.md  INSTALLATION.md  USER_GUIDE.md
(+29 files in other folders)
